:bug: fix: Correção do atributo z-index do header para solucionar sobreposição de elementos.

--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,7 @@ body {
     width: 300px;
     transition: all ease-in-out 0.5s;
     padding: 0 15px;
-    z-index: auto;
+    z-index: 9997;
 }
 
 #header .profile img {
